# Sovereign

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_VERIFIED.md  CLEANUP_COMPLETED.md  FINAL_CLEANUP_SUMMARY.md  FINAL_INDEX.md  INGEST_PIPELINE_COMPLETE.md  LICENSE  MASTER_TEST_INVENTORY_STATUS.md  MASTER_TEST_QUICK_REFERENCE.md  PROGRESS_MONITORING.md  PROJECT_STATUS.md  README.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SUMMARY.md  SYSTEM_OVERVIEW.md  TECHNICAL_SPEC.md  WAR_MODE_IMPLEMENTATION_SUMMARY.md  WAR_MODE_RAG_IMPLEMENTATION.md  WAR_MODE_STATUS.md  WAR_RAG_COMPLETION_STATUS.md  audit_doctrine_embeddings.py  check_ch10.py  check_extraction.py  cold.py  connect_darbar.py  create_doctrine_embeddings.py  debate_output.txt  doctrine_embedding_audit.py  doctrine_federation.py  embed_all_doctrine.py  embed_doctrine.py  export_architecture.py  federation_stats.py  ingest_batch_report.json  ingest_book.py  interactive_test.py  minister_contracts.py  pyproject.toml  requirements.txt  (+13 more)
TEST FILES/: test_clean.py  test_clean2.py  test_clean3.py  test_detect.py  test_detect2.py  test_hardening_fixes.py  test_hardening_units.py  test_new_clean.py  test_pdfplumber.py  test_real_clean.py  test_smart_clean.py
app/: main.py  session_runner.py
cli/: README.md  ask_cli.py  audit_cli.py  ingest_cli.py  main.py  prompts.py  source_commands.py
cold_strategist/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  __init__.py  cold.py  cold_outcome.py
context/: context_builder.py  context_schema.py  question_engine.py  salience.py  validation.py
core/: state_machine.py
darbar/: n.py  (+1 more)
(+758 files in other folders)
